# procmem

./: Cargo.toml  README.md  RESEARCH.md  build.sh  rustfmt.toml
examples/: string_finder.rs
procmem_access/: Cargo.toml
procmem_access/src/: lib.rs  prelude.rs
procmem_access/src/common/: mod.rs
procmem_access/src/memory/: access.rs  lock.rs  map.rs  mod.rs
procmem_access/src/platform/: mod.rs  simple.rs
procmem_access/src/util/: acc_filter.rs  merge.rs  mod.rs
procmem_access/src_old/instance/: mod.rs  singlethread.rs
procmem_access/src_old/scan/: mod.rs
procmem_decky/: .gitignore  LICENSE  main.py  pack.sh  package.json  plugin.json  rollup.config.js  tsconfig.json
procmem_decky/src/: index.tsx
procmem_examples/: Cargo.toml  setcap.sh
procmem_examples/python/: repl.py  string_finder.py
procmem_jsonrpc/: Cargo.toml
procmem_jsonrpc/src/: lib.rs  rpc.rs
procmem_jsonrpc/src/procedures/: lock.rs  mod.rs
procmem_python/: Cargo.toml
procmem_python/src/: lib.rs
procmem_scan/: Cargo.toml
procmem_scan/src/: candidate.rs  lib.rs  prelude.rs  stream.rs
procmem_scan/src/common/: mod.rs  (+1 more)
research/: RESEARCH.md  mach_excServer.c  mach_excUser.c
src/: lib.rs  map.rs  process.rs
src/common/: mod.rs  raw_bytes.rs
src/context/: mod.rs  process.rs  scanner.rs
src/instance/: multithread.rs  singlethread.rs
src/map/: entry.rs  mod.rs
src/memory/: access.rs  map.rs
src/scan/: base.rs  mod.rs  scanner.rs
src/scanner/: candidate.rs  mod.rs  sequential.rs  stream.rs
src/util/: mod.rs
src_old/: lib.rs
src_old/scan/: scanner.rs
(+21 files in other folders)
